Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32234

Missing spaces in Spider variable descriptions

    XMLWordPrintable

Details

    Description

      The two newly-added 11.3.0 Spider system variables both have typos in their description.
      'stringswithout' and 'stringsare' respectively:

      SELECT VARIABLE_NAME,VARIABLE_COMMENT FROM INFORMATION_SCHEMA.SYSTEM_VARIABLES WHERE VARIABLE_NAME LIKE 'spider_suppress_%' OR VARIABLE_NAME LIKE 'spider_igno%'\G
      *************************** 1. row ***************************
         VARIABLE_NAME: SPIDER_SUPPRESS_COMMENT_IGNORED_WARNING
      VARIABLE_COMMENT: Whether to suppress warnings that table COMMENT or CONNECTION stringsare ignored due to specified table options
      *************************** 2. row ***************************
         VARIABLE_NAME: SPIDER_IGNORE_COMMENTS
      VARIABLE_COMMENT: Whether to unconditionally ignore COMMENT and CONNECTION stringswithout checking whether table options are specified
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              greenman Ian Gilfillan
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 26m
                  26m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.