MDEV-32234 Fix missing space in Spider variable descriptions